Fix global header spacing

--- a/app/assets/stylesheets/main/header_nav.css.scss
+++ b/app/assets/stylesheets/main/header_nav.css.scss
@@ -16,6 +16,9 @@
 		height: 36px;
 		width: auto;
 	}
+	.header-item {
+		margin-right: 0;
+	}
 }
 
 
